--- a/Web.config
+++ b/Web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="cnCinestar" connectionString="Data Source=oaemdl-server.database.windows.net;Initial Catalog=cinestar;User ID=oaemdl-admin;Password=Senati2024@" providerName="System.Data.SqlClient"/>
+    <add name="cnCinestar" connectionString="Data Source=oamdl.database.windows.net;Initial Catalog=cinestar;User ID=oaemdl;Password=Senati2024" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
